# honest_llama

./: Dockerfile  docker-compose.yml  interveners.py  main.py  pyproject.toml  utils.py
get_activations/: get_activations.py  get_activations.sh
legacy/: llama_get_activations.py  llama_utils.py  llama_validate_2fold.py
validation/: edit_weight.py  push_hf.py  validate_2fold.py
