[project]
name = "honest-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baukit",
    "datasets==3.6.0",
    "einops>=0.8.1",
    "evaluate>=0.4.5",
    "ipdb>=0.13.13",
    "openai>=1.99.9",
    "pyvene>=0.1.7",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }
